# traffic-lights

./: CMakeLists.txt  README.md  h.txt  hej.txt  j.txt  w.txt
.github/workflows/: ci.yml
docs/: LICENSE  class_diagram.puml  in.txt  input.txt  output.txt  requirements.txt  use_case_diagram.puml
example/: input.txt  output_detail.txt
input/: density.cpp  density.hpp  input_format.txt  test_input.cpp
src/: constants.hpp  controler.cpp  controler.hpp  crossing.cpp  crossing.hpp  density.cpp  density.hpp  file_access.cpp  file_access.hpp  in.hpp  light.cpp  light.hpp  light_set.hpp  main.cpp  options.cpp  options.hpp  out.hpp  set.hpp  test_input.cpp  ui.cpp  ui.hpp
tests/: controler_test.cpp  crossing_test.cpp  density_test.cpp  file_access_test.cpp  light_set_test.cpp  test.cpp
